samples/_failures_safe/1761447601_968710_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f77ed567.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f77ed567.c:155:31: error: expected ‘;’ at end of input
  155 |                 token.value[0]
      |                               ^
      |                               ;
./samples/SAFE/__tmp_f77ed567.c:155:17: error: expected declaration or statement at end of input
  155 |                 token.value[0]
      |                 ^~~~~
./samples/SAFE/__tmp_f77ed567.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f77ed567.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f77ed567.c:155:17: error: expected declaration or statement at end of input
